--- a/src/Components/Pages/tukarPoin/tukarPoin.css
+++ b/src/Components/Pages/tukarPoin/tukarPoin.css
@@ -15,7 +15,7 @@
   font-size: 2.5rem;
   font-weight: 800;
   margin-bottom: 0.5rem;
-  background: linear-gradient(135deg, #047857, #10b981);
+  background: (--color_primary-dark);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
